--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -1,30 +1,36 @@
-.grid{
+.grid, .form-grid{
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-auto-rows: auto;
     grid-gap: 1em;
 }
 .grid > .col-4{
-    grid-column: auto/ span 4;
+    grid-column: auto/span 4;
 }
-.grid > .col-6{
-    grid-column: auto/ span 6;
+.form-grid > .col-6{
+    grid-column: auto/span 6;
 }
 .grid > .col-8{
-    grid-column: auto / span 8;
+    grid-column: auto/span 8;
 }
 .grid > .col-12{
     grid-column: 1 / -1;
 }
+.form-grid > .col-12{
+    grid-column: 1 / -1;
+}
 @media (max-width:960px){
     .grid{
-        grid-template-columns: repeat(6,1fr);
+        grid-template-columns: repeat(8,1fr);
 
+    }
+    .form-grid{
+        grid-template-columns: repeat(6,1fr);
     }
 }
 @media (max-width:640px){
     .grid{
-        grid-template-columns: repeat(6,1fr);
+        grid-template-columns: repeat(4,1fr);
 
     }
 }
