--- a/app/views/confirmdelete.ejs
+++ b/app/views/confirmdelete.ejs
@@ -10,7 +10,8 @@
             <div class="desc">
                 <h1 class=""><%=content.title%></h1>
                 <div class="">
-                    For Branch : <%= content.branch %> | Sem : <%= content.sem %> | Sub: <%= content.subject %>
+                    For Branch : <%= content.branch %> | Sem : <%= content.sem %><br>
+                    Sub: <%= content.subject %>
                 </div>
                 <p>Info: <%= content.info %></p>
                 <p>Upload details: TeamGeekseek | <%= content.ctype %> | <%= content.created.toDateString() %></p>
