--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -18,7 +18,7 @@
 	</div>
 	<div class="grid container">
 		<div class="col-12">
-			<img src="/favicons/Full Logo.svg">
+			<img src="/favicons/svg/Full Logo.svg">
 		</div>
 	</div>
 	<% } %>
