--- a/app/views/upload.ejs
+++ b/app/views/upload.ejs
@@ -4,7 +4,7 @@
         <a href="/mycontent" class="btn big red">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
     </div>
     <form action="/gsad/upload" method="POST" enctype="multipart/form-data" style="margin-bottom:50px;">
-        <div class="grid container">
+        <div class="form-grid container">
             <div class="col-6">
                 <input type="file" name="fup" required style="width: 100%; height: 30px;">
             </div>
