--- a/app/views/content.ejs
+++ b/app/views/content.ejs
@@ -66,12 +66,13 @@
         	<% if(ctitle==="mycontent"){ %>
         		<% contents.sort(function(a, b){return b.created - a.created}).forEach(function(content){ %>
         			<% if((currentUser) && ((currentUser._id.equals(content.owner)) || (currentUser._id.toString()===superAdmin))){ %>
-        				<div class="col-6 content">
+        				<div class="col-4 content">
         					<p class="searchstring" style="display: none;"><%= content.branch %> <%= content.sem %> <%= content.subject %> <%= content.title %> <%= content.info %></p>
 				            <div class="desc">
 				                <h1 class=""><%=content.title%></h1>
 				                <div class="">
-									For Branch : <%= content.branch %> | Sem : <%= content.sem %> | Sub: <%= content.subject %>
+									For Branch : <%= content.branch %> | Sem : <%= content.sem %><br>
+									Sub: <%= content.subject %>
 								</div>
 								<p>Info: <%= content.info %></p>
 				                <p>Upload details: TeamGeekseek | <%= content.ctype %> | <%= content.created.toDateString() %></p>
@@ -84,12 +85,13 @@
 				<% }) %>
         	<% } else { %>
 	        	<% contents.sort(function(a, b){return b.created - a.created}).forEach(function(content){ %>
-			        <div class="col-6 content">
+			        <div class="col-4 content">
 			        	<p class="searchstring" style="display: none;"><%= content.branch %> <%= content.sem %> <%= content.subject %> <%= content.title %> <%= content.info %></p>
 			            <div class="desc">
 			                <h1 class=""><%=content.title%></h1>
 			                <div class="">
-								For Branch : <%= content.branch %> | Sem : <%= content.sem %> | Sub: <%= content.subject %>
+								For Branch : <%= content.branch %> | Sem : <%= content.sem %><br>
+								Sub: <%= content.subject %>
 							</div>
 							<p>Info: <%= content.info %></p>
 			                <p>Upload details: TeamGeekseek | <%= content.created.toDateString() %></p>
