--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -7,9 +7,9 @@
 			</div>
 			<div class="foot-l">
 				<ul class="foot-social">
-					<li><a href="https://github.com/thetinygoat" title="Sachin Saini" target="_blank"><img src="https://avatars0.githubusercontent.com/u/32238055" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
+					<li><a href="https://github.com/thetinygoat" title="Sachin Saini" target="_blank"><img src="https://avatars0.githubusercontent.com/u/32238055" onerror="this.onerror=null;this.src='/favicons/svg/ss.jpg'" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
 					<li><a href="https://github.com/riuandg5/Geekseek" title="Github Project" target="_blank"><i class="fab fa-github fa-3x"></i></a></li>
-					<li><a href="https://github.com/riuandg5" title="Rishu Anand" target="_blank"><img src="https://avatars2.githubusercontent.com/u/34133332" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
+					<li><a href="https://github.com/riuandg5" title="Rishu Anand" target="_blank"><img src="https://avatars2.githubusercontent.com/u/34133332" onerror="this.onerror=null;this.src='/favicons/svg/ra.jpg'" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -18,15 +18,11 @@
 	<script src="/js/script.js"></script>
 	<script>
         if('serviceWorker' in navigator){
-        	window.addEventListener('load', function() {
-				navigator.serviceWorker.register('/service-worker.js')
-				.then(function(e){
-        			console.log("ServiceWorker registration successful with scope: ", e.scope);
-        		})
-        		.catch(function(e){
-        			console.error("ServiceWorker registration failed: ", e);
-        		})
-			});
+			navigator.serviceWorker.register('/service-worker.js').then(function(reg){
+        		console.log("ServiceWorker registration successful with scope: ", reg.scope);
+        	}).catch(function(reg){
+        		console.error("ServiceWorker registration failed: ", reg);
+        	})
         }
     </script>
 </body>
