add content link field

--- a/app/views/alldeletedbyadmin.ejs
+++ b/app/views/alldeletedbyadmin.ejs
@@ -22,7 +22,7 @@
 				<% }) %>
         	<% } else { %>
         		<div class="col-12">
-					<img src="/favicons/Full Logo.svg">
+					<img src="/favicons/svg/Full Logo.svg">
 				</div>
         	<% } %>
         </div>
