--- a/app/views/contentedit.ejs
+++ b/app/views/contentedit.ejs
@@ -1,15 +1,20 @@
-<%include partials/header%>
+<% include partials/header %>
 <div class="hero">
     <h1 class="hero-head">Edit Content</h1>
     <a href="/mycontent" class="btn big red">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
 </div>
-<form action="/<%= content._id %>/update?_method=PUT" method="POST" enctype="multipart/form-data" style="margin-bottom:50px;">
+<form action="/<%= content._id %>/update?_method=PUT" method="POST" enctype="multipart/form-data" onsubmit="return requireThis()" style="margin-bottom:50px;">
     <div class="form-grid container">
-        <div class="col-6">
-                <input type="file" name="fup" style="width: 100%; height: 30px;">
-                <input type="text" name="content[fid]" value="<%= content.fid %>" style="display: none;">
+        <div class="col-12">
+                <input type="file" id="upfile" name="fup" onchange="requireThis()" style="width: 49%; height: 30px;">
+                <input type="url" id="uplink" name="lup" onkeyup="requireThis()" placeholder="Or provide link..." autocomplete="off" style="width: 49%; height: 30px;">
+                <% if(content.fid){ %>
+                    <input type="text" name="content[fid]" value="<%= content.fid %>" style="display: none;">
+                <% } else if(content.fl){ %>
+                    <input type="text" name="content[fl]" value="<%= content.fl %>" style="display: none;">
+                <% } %>
         </div>
-        <div class="col-6">
+        <div class="col-12">
             <select name="content[type]" required style="width: 32.7%; height: 30px;">
                 <option value="" disabled selected>Content type..</option>
                 <option id="note" value="note">Notes</option>
@@ -59,6 +64,23 @@
     </div>
 </form>
 <script>
+    function requireThis(){
+        var file = document.querySelector("#upfile"),
+            link = document.querySelector("#uplink");
+        if((file.value) && (!link.value)){
+            file.disabled = false;
+            link.disabled = true;
+            return true;
+        } else if((!file.value) && (link.value)){
+            file.disabled = true;
+            link.disabled = false;
+            return true;
+        } else {
+            file.disabled = false;
+            link.disabled = false;
+            return true;
+        }
+    }
     document.getElementById("<%= content.ctype %>").selected = true;
     document.getElementById("<%= content.branch %>").selected = true;
     document.getElementById("<%= content.sem %>").selected = true;
