--- a/app/views/upload.ejs
+++ b/app/views/upload.ejs
@@ -1,14 +1,15 @@
-<%include partials/header%>
+<% include partials/header %>
     <div class="hero">
         <h1 class="hero-head">Upload Content</h1>
         <a href="/mycontent" class="btn big red">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
     </div>
-    <form action="/gsad/upload" method="POST" enctype="multipart/form-data" style="margin-bottom:50px;">
+    <form action="/gsad/upload" method="POST" enctype="multipart/form-data" onsubmit="return requireThis()" style="margin-bottom:50px;">
         <div class="form-grid container">
-            <div class="col-6">
-                <input type="file" name="fup" required style="width: 100%; height: 30px;">
+            <div class="col-12">
+                <input type="file" id="upfile" name="fup" onchange="requireThis()" style="width: 49%; height: 30px;">
+                <input type="url" id="uplink" name="lup" onkeyup="requireThis()" placeholder="Or provide link..." autocomplete="off" style="width: 49%; height: 30px;">
             </div>
-            <div class="col-6">
+            <div class="col-12">
                 <select name="content[type]" required style="width: 32.7%; height: 30px;">
                     <option value="" disabled selected>Content type..</option>
                     <option id="note" value="note">Notes</option>
@@ -57,4 +58,23 @@
             </div>
         </div>
     </form>
-<%include partials/footer%>
+    <script>
+        function requireThis(){
+            var file = document.querySelector("#upfile"),
+                link = document.querySelector("#uplink");
+            if((file.value) && (!link.value)){
+                file.disabled = false;
+                link.disabled = true;
+                return true;
+            } else if((!file.value) && (link.value)){
+                file.disabled = true;
+                link.disabled = false;
+                return true;
+            } else {
+                file.disabled = false;
+                link.disabled = false;
+                return false;
+            }
+        }
+    </script>
+<% include partials/footer %>
