--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -29,10 +29,17 @@
 			}
 		} else {
 			if("serviceWorker" in navigator){
+				navigator.serviceWorker.register('/service-worker.js').then(function(reg){
+			    	console.log("Add to homescreen should popup!");
+			    }).catch(function(reg){
+		    		console.error("Add to homescreen popup failed: ", reg);
+		    	})
 			 	navigator.serviceWorker.getRegistrations().then(function(registrations){
- 					for(let registration of registrations){
-						registration.unregister()
-					}
+			 		if(registrations[0].active){
+			 			for(let registration of registrations){
+							registration.unregister()
+						}
+			 		}
 				})
 				caches.keys().then(function(cacheNames){
 					for(let cacheName of cacheNames){
