--- a/app/views/blognew.ejs
+++ b/app/views/blognew.ejs
@@ -3,7 +3,9 @@
 	<div class="animator">
         <div class="hero">
             <h1 class="hero-head">Create new post here...</h1>
-            <a href="/blog/posts" class="btn red big">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
+            <div class="hero-options">
+            	<a href="/blog/posts" class="btn red big">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
+            </div>
         </div>
         <form action="/blog/posts/new" method="POST" class="form-grid container">
         	<div class="col-12">
