--- a/app/views/confirmdelete.ejs
+++ b/app/views/confirmdelete.ejs
@@ -3,7 +3,9 @@
     <div class="hero">
         <h1 class="hero-head">Are you Sure you Want to Delete this?</h1>
         <p><em>This change is permanent and is not reversible.</em></p>
-        <a href="/mycontent" class="btn big green">No, Cancel</a>
+        <div class="hero-options">
+            <a href="/mycontent" class="btn big green">No, Cancel</a>
+        </div>
     </div>
     <div class="grid container">
         <div class="col-12 content">
