--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -2,7 +2,9 @@
 	
 	<div class="hero">
         <h1 class="hero-head">Admin SignIn</h1>
-        <a href="/" class="btn big red">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
+        <div class="hero-options">
+        	<a href="/" class="btn big red">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
+        </div>
     </div>
     <div class="container">
 	    <form action="/gsad/signin" method="POST">
