--- a/app/views/blogedit.ejs
+++ b/app/views/blogedit.ejs
@@ -3,7 +3,9 @@
     <div class="animator">
         <div class="hero">
             <h1 class="hero-head">Edit your post here...</h1>
-            <a href="/blog/posts" class="btn red big">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
+            <div class="hero-options">
+                <a href="/blog/posts" class="btn red big">Cancel <i class="fas fa-times" aria-hidden="true"></i></a>
+            </div>
         </div>
         <form action="/blog/posts/<%= post._id %>?_method=PUT" method="POST" class="form-grid container">
             <div class="col-12">
