--- a/public/css/helpers.css
+++ b/public/css/helpers.css
@@ -25,6 +25,14 @@
 .hero-head{
     font-size: 3em;
 }
+.hero-options{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.hero-options a{
+    margin: 0.3em 0.5em;
+}
 /* thumbnails */
 .content{
     -webkit-box-sizing: border-box;
@@ -131,5 +139,9 @@
     }
     .hero-head{
         font-size: 2em;
+    }
+    .hero-options{
+        flex-direction: column;
+        align-items: center;
     }
 }
