homepage tile content

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -16,7 +16,7 @@
                         <h1>User Friendly</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>We tried our best to keep Geekseek simple as well as powerful. Notes, Assignments, e-Books, Labfiles, Question Papers is all that we have. You can see updates about important uploaded contents in our Blog section. In short we will try to make you pass your semester ;)</p>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                         <h1>Access From Homescreen</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>No need to open Chrome or any other browser everytime. Add Geekseek to your homescreen of your mobile device and have an app like experience. We are working on saving contents to your mobile device to access it offline.</p>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                         <h1>Help Yourself!</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>Are your notes amazing? Don't be nerdy! Help your bachmates and juniors with your study material. Geekseek gives you a great and easy platform to help others. And one thing important your identity is anonymous till your bachates don't guess it XD</p>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         <h1>Complete Content Backup</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>We have a strong content backup strategy. Every content is saved securely, but we don't believe in shitty watermarks or copyrights. Just share what you have :)</p>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <h1>Always Uptodate Content</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>Sick of same old content? No problem, Geekseek will always try to provide you with uptodate content! If you have better content than here at Geekseek, please make it available to us and help others also.</p>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                         <h1>About Our Team</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>Ah! There's no team. Its only about you and your college. Make Geekseek a great resource of our college for all study needs.</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         <h1>Join Admin Panel</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>Want to share some content? Join us.. Geekseek provides you a very easy way to upload and manage content. You can edit or update your content without any restrictions.</p>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                         <h1>Super Admin</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>Yeah Super Admin! We have some super admins for Geekseek, who ensure that admins work properly and do not misuse this open source platform.</p>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <h1>For Love</h1>
                     </div>
                     <div class="back">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ex earum, laboriosam vel repellendus dolorum error odit inventore repudiandae quae necessitatibus ab! Officia quia accusantium excepturi culpa at itaque architecto.</p>
+                        <p>Geekseek is made to share love with study material. We know you will make us reach our aim. Make it, use it and share it!</p>
                     </div>
                 </div>
             </div>
